Link to and initialize audgui from plugins that need it.

--- a/src/albumart/Makefile
+++ b/src/albumart/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${GTK_CFLAGS}
-LIBS += ${GTK_LIBS}
+LIBS += ${GTK_LIBS} -laudgui
