--- a/src/hotkey/Makefile
+++ b/src/hotkey/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../.. -I..
-LIBS += ${GLIB_LIBS} ${GTK_LIBS} -lX11
+LIBS += ${GLIB_LIBS} ${GTK_LIBS} -lX11 -laudgui
