--- a/src/search-tool/Makefile
+++ b/src/search-tool/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${GTK_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GTK_LIBS}
+LIBS += ${GTK_LIBS} -laudgui
