Add --disable-gtk option

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -16,6 +16,8 @@ TRANSPORT_PLUGINS ?= @TRANSPORT_PLUGINS@
 VISUALIZATION_PLUGINS ?= @VISUALIZATION_PLUGINS@
 VISUALIZATION_PLUGIN_DIR ?= @VISUALIZATION_PLUGIN_DIR@
 
+USE_GTK ?= @USE_GTK@
+
 ALSA_CFLAGS ?= @ALSA_CFLAGS@
 ALSA_LIBS ?= @ALSA_LIBS@
 BINIO_CFLAGS ?= @BINIO_CFLAGS@
