--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl ***
 dnl Initialize
 dnl ==========
 AC_PREREQ([2.59])
-AC_INIT([audacious-plugins], [3.5-beta1])
+AC_INIT([audacious-plugins], [3.6-devel])
 AC_COPYRIGHT([(C) 2005-2014 Audacious Team])
 
 AC_DEFINE_UNQUOTED([PACKAGE], "$PACKAGE_NAME", [Name of package])
@@ -35,9 +35,9 @@ LIBS="$LIBS $LIBINTL"
 dnl Check for Audacious
 dnl ===================
 
-PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 3.5],
+PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 3.6],
     [],
-    [AC_MSG_ERROR([Cannot find Audacious 3.5; have you installed Audacious yet?])]
+    [AC_MSG_ERROR([Cannot find Audacious 3.6; have you installed Audacious yet?])]
 )
 
 CPPFLAGS="$CPPFLAGS $AUDACIOUS_CFLAGS"
