console: Compile as C++.

--- a/src/console/Makefile
+++ b/src/console/Makefile
@@ -1,57 +1,57 @@
 PLUGIN = console${PLUGIN_SUFFIX}
 
-SRCS = Ay_Apu.cxx              \
-       Ay_Cpu.cxx              \
-       Ay_Emu.cxx              \
-       Blip_Buffer.cxx         \
-       Classic_Emu.cxx         \
-       Data_Reader.cxx         \
-       Dual_Resampler.cxx      \
-       Effects_Buffer.cxx      \
-       Fir_Resampler.cxx       \
-       Gbs_Emu.cxx             \
-       Gb_Apu.cxx              \
-       Gb_Cpu.cxx              \
-       Gb_Oscs.cxx             \
-       gme.cxx                 \
-       Gme_File.cxx            \
-       Gym_Emu.cxx             \
-       Gzip_Reader.cxx         \
-       Hes_Apu.cxx             \
-       Hes_Cpu.cxx             \
-       Hes_Emu.cxx             \
-       Kss_Cpu.cxx             \
-       Kss_Emu.cxx             \
-       Kss_Scc_Apu.cxx         \
-       M3u_Playlist.cxx        \
-       Multi_Buffer.cxx        \
-       Music_Emu.cxx           \
-       Nes_Apu.cxx             \
-       Nes_Cpu.cxx             \
-       Nes_Fme7_Apu.cxx        \
-       Nes_Namco_Apu.cxx       \
-       Nes_Oscs.cxx            \
-       Nes_Vrc6_Apu.cxx        \
-       Nsfe_Emu.cxx            \
-       Nsf_Emu.cxx             \
-       Sap_Apu.cxx             \
-       Sap_Cpu.cxx             \
-       Sap_Emu.cxx             \
-       Sms_Apu.cxx             \
-       Snes_Spc.cxx            \
-       Spc_Cpu.cxx             \
-       Spc_Dsp.cxx             \
-       Spc_Emu.cxx             \
-       Spc_Filter.cxx          \
-       Vfs_File.cxx            \
-       Vgm_Emu.cxx             \
-       Vgm_Emu_Impl.cxx        \
-       Ym2413_Emu.cxx          \
-       Ym2612_Emu.cxx          \
-       Zlib_Inflater.cxx       \
-       Audacious_Driver.cxx    \
-       configure.c             \
-       plugin.c
+SRCS = Ay_Apu.cc              \
+       Ay_Cpu.cc              \
+       Ay_Emu.cc              \
+       Blip_Buffer.cc         \
+       Classic_Emu.cc         \
+       Data_Reader.cc         \
+       Dual_Resampler.cc      \
+       Effects_Buffer.cc      \
+       Fir_Resampler.cc       \
+       Gbs_Emu.cc             \
+       Gb_Apu.cc              \
+       Gb_Cpu.cc              \
+       Gb_Oscs.cc             \
+       gme.cc                 \
+       Gme_File.cc            \
+       Gym_Emu.cc             \
+       Gzip_Reader.cc         \
+       Hes_Apu.cc             \
+       Hes_Cpu.cc             \
+       Hes_Emu.cc             \
+       Kss_Cpu.cc             \
+       Kss_Emu.cc             \
+       Kss_Scc_Apu.cc         \
+       M3u_Playlist.cc        \
+       Multi_Buffer.cc        \
+       Music_Emu.cc           \
+       Nes_Apu.cc             \
+       Nes_Cpu.cc             \
+       Nes_Fme7_Apu.cc        \
+       Nes_Namco_Apu.cc       \
+       Nes_Oscs.cc            \
+       Nes_Vrc6_Apu.cc        \
+       Nsfe_Emu.cc            \
+       Nsf_Emu.cc             \
+       Sap_Apu.cc             \
+       Sap_Cpu.cc             \
+       Sap_Emu.cc             \
+       Sms_Apu.cc             \
+       Snes_Spc.cc            \
+       Spc_Cpu.cc             \
+       Spc_Dsp.cc             \
+       Spc_Emu.cc             \
+       Spc_Filter.cc          \
+       Vfs_File.cc            \
+       Vgm_Emu.cc             \
+       Vgm_Emu_Impl.cc        \
+       Ym2413_Emu.cc          \
+       Ym2612_Emu.cc          \
+       Zlib_Inflater.cc       \
+       Audacious_Driver.cc    \
+       configure.cc             \
+       plugin.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
