pulse_audio: Compile as C++.

--- a/src/pulse_audio/Makefile
+++ b/src/pulse_audio/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = pulse_audio${PLUGIN_SUFFIX}
 
-SRCS = pulse_audio.c
+SRCS = pulse_audio.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
