sdlout: Compile as C++.

--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -1,13 +1,14 @@
 PLUGIN = sdlout${PLUGIN_SUFFIX}
 
-SRCS = sdlout.c \
-       plugin.c \
+SRCS = sdlout.cc \
+       plugin.cc \
 
 include ../../buildsys.mk
 include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
+LD = ${CXX}
 CPPFLAGS += -I../.. ${SDL_CFLAGS}
-CFLAGS += ${GLIB_CFLAGS} ${PLUGIN_CFLAGS}
+CXXFLAGS += ${GLIB_CFLAGS} ${PLUGIN_CFLAGS}
 LIBS += -lm ${GLIB_LIBS} ${SDL_LIBS}
