--- a/src/voice_removal/Makefile
+++ b/src/voice_removal/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = voice_removal${PLUGIN_SUFFIX}
 
-SRCS = voice_removal.c
+SRCS = voice_removal.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
