Some trivial C++ ports.

--- a/src/blur_scope/Makefile
+++ b/src/blur_scope/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = blur_scope${PLUGIN_SUFFIX}
 
-SRCS = blur_scope.c
+SRCS = blur_scope.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
