--- a/src/cd-menu-items/Makefile
+++ b/src/cd-menu-items/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = cd-menu-items${PLUGIN_SUFFIX}
 
-SRCS = cd-menu-items.c
+SRCS = cd-menu-items.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
