Convert Index to a type-safe C++ container.

--- a/src/delete-files/Makefile
+++ b/src/delete-files/Makefile
@@ -7,6 +7,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CPPFLAGS += -I../.. ${GIO_CFLAGS} ${GTK_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += ${GIO_LIBS} ${GTK_LIBS} -laudgui
