--- a/src/ladspa/Makefile
+++ b/src/ladspa/Makefile
@@ -10,6 +10,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CPPFLAGS += -I../.. ${GTK_CFLAGS} ${GMODULE_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += -lm ${GTK_LIBS} ${GMODULE_LIBS} -laudgui
