Add a String class wrapper for the string pool.

--- a/src/amidi-plug/Makefile
+++ b/src/amidi-plug/Makefile
@@ -13,6 +13,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${FLUIDSYNTH_LIBS} -lm
