--- a/src/flacng/Makefile
+++ b/src/flacng/Makefile
@@ -10,6 +10,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${LIBFLAC_CFLAGS} -I../..
 LIBS += ${GLIB_LIBS} ${LIBFLAC_LIBS}
