--- a/src/alarm/Makefile
+++ b/src/alarm/Makefile
@@ -8,6 +8,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${GLIB_LIBS}
