--- a/src/alsa/Makefile
+++ b/src/alsa/Makefile
@@ -9,6 +9,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${GTK_CFLAGS} ${ALSA_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${ALSA_LIBS}
