--- a/src/jack/Makefile
+++ b/src/jack/Makefile
@@ -8,6 +8,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
 LIBS += ${GLIB_LIBS} ${JACK_LIBS} -lsamplerate -lm
