--- a/src/pls/Makefile
+++ b/src/pls/Makefile
@@ -6,6 +6,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
 LIBS += ${GLIB_LIBS}
