--- a/src/vorbis/Makefile
+++ b/src/vorbis/Makefile
@@ -9,6 +9,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${VORBIS_CFLAGS} ${GLIB_CFLAGS}  -I../..
 LIBS += ${VORBIS_LIBS} ${GLIB_LIBS}
