Implement lock-free, copy-on-write Tuple class.

--- a/src/aac-raw/Makefile
+++ b/src/aac-raw/Makefile
@@ -7,6 +7,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FAAD_CFLAGS} -I../..
 LIBS += ${FAAD_LIBS} -lm -laudtag
