--- a/src/mpg123/Makefile
+++ b/src/mpg123/Makefile
@@ -7,6 +7,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MPG123_CFLAGS} -I../..
 LIBS += ${MPG123_LIBS} -laudtag -lm
