--- a/src/vtx/Makefile
+++ b/src/vtx/Makefile
@@ -11,6 +11,8 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
+LD = ${CXX}
+
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../.. -I.
 LIBS += ${GTK_LIBS} ${GLIB_LIBS} -laudgui
