Add --enable-qt option

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -17,6 +17,7 @@ VISUALIZATION_PLUGINS ?= @VISUALIZATION_PLUGINS@
 VISUALIZATION_PLUGIN_DIR ?= @VISUALIZATION_PLUGIN_DIR@
 
 USE_GTK ?= @USE_GTK@
+USE_QT ?= @USE_QT@
 
 ALSA_CFLAGS ?= @ALSA_CFLAGS@
 ALSA_LIBS ?= @ALSA_LIBS@
@@ -77,6 +78,8 @@ SIDPLAYFP_LIBS ?= @SIDPLAYFP_LIBS@
 SNDFILE_CFLAGS ?= @SNDFILE_CFLAGS@
 SNDFILE_LIBS ?= @SNDFILE_LIBS@
 SNDIO_LIBS ?= @SNDIO_LIBS@
+QT_CFLAGS ?= @QT_CFLAGS@
+QT_LIBS ?= @QT_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
