--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ src/mpris2/object-core.c
 src/mpris2/object-core.h
 src/mpris2/object-player.c
 src/mpris2/object-player.h
+src/qtui/ui_main_window.h
+src/qtui/ui_playlist.h
 .deps
 *.a
 *.dll
@@ -22,3 +24,4 @@ src/mpris2/object-player.h
 *.patch
 *.diff
 *.bundle
+*.moc
