qtui: Add --enable-qtui option

--- a/configure.ac
+++ b/configure.ac
@@ -957,6 +957,17 @@ if test "x$enable_gtkui" != "xno"; then
     GENERAL_PLUGINS="$GENERAL_PLUGINS gtkui"
 fi
 
+dnl Qt Interface
+dnl ============
+
+AC_ARG_ENABLE(qtui,
+ [AS_HELP_STRING([--enable-qtui], [enable Qt interface (qtui)])],
+ [enable_qtui=$enableval], [enable_qtui="no"])
+
+if test "x$enable_qtui" != "xno"; then
+    GENERAL_PLUGINS="$GENERAL_PLUGINS qtui"
+fi
+
 dnl Winamp Classic Interface
 dnl =============
 
@@ -1255,5 +1266,6 @@ echo
 echo "  Interfaces"
 echo "  ----------"
 echo "  GTK (gtkui):                            $enable_gtkui"
+echo "  Qt (qtui):                              $enable_qtui"
 echo "  Winamp Classic (skins):                 $enable_skins"
 echo
