--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,18 @@ VISUALIZATION_PLUGINS=""
 CONTAINER_PLUGINS="asx asx3 audpl m3u pls xspf"
 TRANSPORT_PLUGINS="gio"
 
+dnl Qt support
+dnl ==========
+
+AC_ARG_ENABLE(qt,
+ AS_HELP_STRING(--enable-qt, [Enable Qt support (default=disabled)]),
+ USE_QT=$enableval, USE_QT=no)
+
+if test $USE_QT = yes ; then
+    PKG_CHECK_MODULES([QT], [Qt5Core Qt5Gui Qt5Widgets])
+    AC_DEFINE(USE_QT, 1, [Define if Qt support enabled])
+fi
+
 dnl Console
 dnl =======
 
