--- a/configure.ac
+++ b/configure.ac
@@ -76,6 +76,9 @@ AC_ARG_ENABLE(qt,
 if test $USE_QT = yes ; then
     PKG_CHECK_MODULES([QT], [Qt5Core Qt5Gui Qt5Widgets])
     AC_DEFINE(USE_QT, 1, [Define if Qt support enabled])
+
+    # needed if Qt was built with -reduce-relocations
+    QT_CFLAGS="$QT_CFLAGS -fPIC"
 fi
 
 dnl Console
