--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ src/mpris2/object-player.c
 src/mpris2/object-player.h
 src/qtui/ui_main_window.h
 src/qtui/ui_playlist.h
+src/qtui/ui_playlist_tabs.h
 .deps
 *.a
 *.dll
