--- a/src/alsa/Makefile
+++ b/src/alsa/Makefile
@@ -12,5 +12,5 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${GTK_CFLAGS} ${ALSA_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${ALSA_LIBS}
+CPPFLAGS += ${ALSA_CFLAGS} -I../..
+LIBS += ${ALSA_LIBS}
